# django-omniman

./: .readthedocs.yaml  CHANGELOG.md  CONTRACTS.md  CONTRIBUTING.md  DEMO_PROMPT.md  ECOSYSTEM_ROADMAP.md  MANIFEST.in  README.md  SECURITY.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
docs/: Makefile  conf.py  index.rst  requirements.txt
docs/_static/: custom.css
docs/api/: exceptions.rst  models.rst  rest-api.rst  services.md
docs/concepts/: channels.md  directives.md  invariants.md  orders.md  philosophy.md  pipeline.md  sessions.md
docs/contrib/: pricing.rst  stock.rst
docs/deployment/: docker.rst  performance.rst  production.rst
docs/getting-started/: example-shop.md  installation.rst  quickstart.rst  tutorial.rst
docs/guides/: channels.rst  issues-resolution.rst  orders.rst  pricing.rst  sessions.rst  status-flow.rst
docs/integrations/: custom.rst  ifood.rst  payments.rst
docs/reference/: changelog.rst  faq.rst  settings.rst
example/: __init__.py
example/project/: __init__.py  settings.py  urls.py  wsgi.py
example/shop/: __init__.py  admin.py  apps.py  basket_service.py  models.py  pricing.py
example/shop/management/commands/: demo_checkout.py  seed_example.py
example/shop/migrations/: 0001_initial.py  __init__.py
example/shop/tests/: __init__.py  test_basket.py
omniman/: __init__.py  admin.py  admin_widgets.py  apps.py  context_processors.py  exceptions.py  ids.py  models.py  monetary.py  protocols.py  registry.py  services.py  unfold.py
omniman/api/: polling.py  serializers.py  sse.py  urls.py  views.py
omniman/contrib/: __init__.py
omniman/contrib/customer/: __init__.py  protocols.py
omniman/contrib/customer/adapters/: __init__.py  guestman.py  noop.py
omniman/contrib/notifications/: __init__.py  protocols.py  service.py
omniman/contrib/notifications/backends/: __init__.py  console.py  email.py  sms.py  webhook.py  whatsapp.py
omniman/contrib/payment/: __init__.py  handlers.py  protocols.py
omniman/contrib/payment/adapters/: __init__.py  efi.py  mock.py  stripe.py
omniman/contrib/pricing/: __init__.py  modifiers.py  protocols.py
omniman/contrib/pricing/adapters/: __init__.py  noop.py  offerman.py  simple.py
omniman/contrib/refs/: __init__.py  apps.py  models.py  registry.py  sequences.py  services.py
omniman/contrib/refs/migrations/: 0001_initial.py  0002_delete_ref_delete_refsequence.py  0003_initial.py
omniman/contrib/refs/tests/: __init__.py  test_refs.py
omniman/contrib/stock/: __init__.py  handlers.py  protocols.py  resolvers.py
omniman/contrib/stock/adapters/: __init__.py  noop.py  stockman.py
omniman/management/commands/: cleanup_idempotency_keys.py  fix_channel_post_commit_directives.py  process_directives.py  seed_rich_demo.py  simulate_shop_order.py
omniman/migrations/: 0001_initial.py  0002_remove_product.py  0003_alter_channel_options_alter_directive_options_and_more.py  0004_sessionline.py  0005_rename_sessionline_to_sessionitem.py  0006_order_status_canonical.py  0007_rename_status_created_to_new.py  0008_rename_owner_to_handle.py  0009_add_category_and_listing.py  0010_add_order_status_timestamps.py  0011_add_available_at_index.py  0012_sessionitem_session_item_qty_positive.py  0013_directive_started_at.py  0014_fulfillment_fulfillmentitem_and_more.py
omniman/models/: __init__.py  channel.py  directive.py  fulfillment.py  idempotency.py  order.py  session.py
omniman/services/: __init__.py  commit.py  modify.py  resolve.py  write.py
omniman/templates/omniman/admin/: session_change_form.html
omniman/tests/: test_api_polling.py  test_api_sessions.py  test_api_sse.py  test_channel_policies.py  test_commit_branches.py  test_context_processors.py  test_e2e_flow.py  test_exceptions.py  test_management_commands.py  test_models.py  test_modify_service.py  test_notifications.py  test_order_lifecycle.py  test_payment_contrib.py  test_pricing_contrib.py  test_registry.py  test_resolve_service.py  test_services.py  test_services_validators.py  test_stock_contrib.py  test_stock_handlers.py
